8335989: Implement Module Import Declarations (Second Preview)